Brought up to current standards

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@
 .sass-cache/
 .yardoc
 .yardoc/
+/binstub/
 /spec/reports/
+Gemfile.lock
 Notepad++/
 RUNNING_PID
 __MACOSX
@@ -25,15 +27,12 @@ _site/
 _yardoc/
 coverage/
 doc/
-exe/
 jekyll/doc/
 node_modules/
-/exe/
 out/
 pkg/
 project/
+spec/status_persistence.txt
 target/
 tmp/
 ~*
-Gemfile.lock
-spec/status_persistence.txt
