Brought up to current standards

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,13 @@
     {
       "debugPort": "0",
       "name": "Attach rdbg",
-      "type": "rdbg",
       "request": "attach",
+      "type": "rdbg",
+    },
+    {
+      "name": "Attach with ruby_lsp",
+      "request": "attach",
+      "type": "ruby_lsp",
     },
     {
       "args": [
@@ -20,6 +25,7 @@
       "request": "launch",
       "script": "${workspaceRoot}/binstub/rspec",
       "type": "rdbg",
+      "useBundler": true,
     },
     {
       "args": [
@@ -32,6 +38,7 @@
       "request": "launch",
       "script": "${workspaceRoot}/binstub/rspec",
       "type": "rdbg",
+      "useBundler": true,
     }
   ]
 }
